--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/telescope": "^4.15",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.0@beta",
+        "livewire/volt": "^1.0@beta",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
