--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/socialite": "^5.8",
         "laravel/telescope": "^4.15",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0@beta",
