update : add env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:6S5RMWUWgkZsCcoA5as4q9+HtIfgDMgu/PNroYikTws=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,17 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=ukk
 DB_USERNAME=root
 DB_PASSWORD=
+
+TELESCOPE_ENABLED=true
+
+GOOGLE_CLIENT_ID=515592532509-4jf68nk825cgirgta2da5adgti0rhjc5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_REDIRECT=http://localhost:8000/auth/google/callback
+
+INSTAGRAM_SESSION_ID="50712082830%3ACK0FZAFBP0pqf9%3A4%3AAYdluSaHwqlIeHy-Hfz70Bea8Dg7LqVoJMhPN_TdfQ"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
