--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "laravel/socialite": "^5.8",
         "laravel/telescope": "^4.15",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.0@beta",
+        "livewire/livewire": "^3.1",
         "livewire/volt": "^1.0@beta",
         "spatie/laravel-permission": "^5.10"
     },
